--- a/styles/nullstyles.scss
+++ b/styles/nullstyles.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   // user-select: none;
   text-decoration: none;
